--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 $fair: #fff;
-$smoothfair: #e4e4e4;
+$smooth: rgba(204,204,204,1);
 $dark: #000;
 $smoothdark: #040404;
-$special: #d6281b;
+$special: rgba(52,141,178,1);
