--- a/index.ejs
+++ b/index.ejs
@@ -7,6 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    
+    <section class="area area--about">
+        <article class="article">
+            <div class="article__header">
+                <h1 class="title title--dark">About</h1>
+            </div>
+            <div class="article__body">
+                <div class="article__aside">
+                    <div class="preLine"></div>
+                    <a href="google.com" class="icon"><img src="./assets/images/fb_grey.svg"/></a>
+                    <a href="google.com" class="icon"><img src="./assets/images/twitter_grey.svg"/></a>
+                    <a href="google.com" class="icon"><img src="./assets/images/insta_grey.svg"/></a>
+                    <div class="endLine"></div>
+                </div>
+                <div class="article__content">
+                    <p class="text text--heavy">What if a storm hits Hilton Head Island before you get ready to go on vacation? The answer is simple… stay home! But before you unpack, just check to make sure whether the Island has been affected. We have had many tropical storm warnings over the years, but unlike Florida we’ve been extremely fortunate. In our opinion, the best offense is defense.</p>
+                    <p class="text text--light">We recommend purchasing travel insurance. Even the most basic travel insurance will provide some compensation if flights are canceled or the island is closed down due to a hurricane.</p>
+                    <p class="text text--light">In 2006, the National Hurricane Center is predicting a hurricane season with 8 to 10 named storms. As residents of Hilton Head Island, we always prepare the best we can. We are constantly planning ahead. You should do the same; you need to plan ahead. While we cannot forecast the weather day in and day out, the Internet can provide help in dealing with the variety of weather conditions vacationers may face that could take a toll on Hilton Head Island.  Weather Channel site and the National Hurricane Centers site are two excellent resources. At Hilton Head Rentals we recommend the following. Use the services of a travel professional, especially if you will be vacationing during hurricane season. When buying vacation packages through a vacation rental property management company or a travel agency, it will reduce your stress because travel professionals are your advocates and are ready to help you through difficult travel scenarios. If a vacation is booked online it may be difficult to get through to one of their representatives. On Hilton Head Island there are a lot of different vacation companies that offer a variety of vacation insurance plans. If you book directly with a vacation rental management company that offers homes, villas and condos, they will in all likelihood have insurance plans to offer. If you’re working with a travel agent, they can assist you in determining which plan provides the best coverage for the right price. Some even offer a “cancel for any reason” waiver, allowing you to see that a hurricane might be swirling for Hilton Head. With this type of plan, your travel professionals can quickly use their resources to find an alternate resort area so your vacation won’t be sacrificed.</p>
+                    <img src="./assets/images/foto1.png"/>
+                    <p class="text text--light">On Hilton Head Island there are a lot of different vacation companies that offer a variety of vacation insurance plans. If you book directly with a vacation rental management company that offers homes, villas and condos, they will in all likelihood have insurance (1) plans to offer. If you’re working with a travel agent (2), they can assist you in determining which plan provides the best coverage for the right price. Some even offer a “cancel for any reason” waiver, allowing you to see that a hurricane might be swirling for Hilton Head. With this type of plan, your travel professionals can quickly use their resources to find an alternate resort area so your vacation won’t be sacrificed.</p>
+                    <p class="text text--light">On Hilton Head Island there are a lot of different vacation companies that offer a variety of vacation insurance plans. If you book directly with a vacation rental management company that offers homes, villas and condos, they will in all likelihood have insurance plans to offer. If you’re working with a travel agent, they can assist you in determining which plan provides the best coverage for the right price. Some even offer a “cancel for any reason” waiver, allowing you to see that a hurricane might be swirling for Hilton Head. With this type of plan, your travel professionals can quickly use their resources to find an alternate resort area so your vacation won’t be sacrificed.</p>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="area area--booking">
+        <article class="article">
+            <div class="article__header">
+                <h1 class="title title--fair">About</h1>
+            </div>
+            <div class="article__body">
+
+            </div>
+        </article>
+    </section>
 </body>
 </html>
