--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,7 +8,12 @@ html, body {
 
 * {
     box-sizing: border-box;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    position: relative;
+    max-width: 100%;
 }
 
 body {
@@ -17,7 +22,6 @@ body {
 }
 
 .area {
-    border: 1px solid red;
     
 }
 .area--about {
@@ -27,27 +31,24 @@ body {
     background: url('./../images/booking_bg.png');
 }
 .article {
-    border: 1px solid green;
-    width: 75%;
+    width: 45%;
     margin: 40px auto;
     display: flex;
     flex-direction: column;
 }
 .article__header, .article__body {
-    border: 2px solid blue;
     display: flex;
 }
 .article__body {
-}
-.article__aside {
-    flex: 0 0 4%;
-    border: 1px solid pink;
-    display: flex;
-    flex-direction: column;
+    line-height: 1.5em;
     position: relative;
 }
+.article__aside {
+    flex: 0 0 3%;
+    display: flex;
+    flex-direction: column;
+}
 .icon {
-    border: 1px solid red;
     text-align: center;
 }
 .preLine {
@@ -57,16 +58,50 @@ body {
     @include vl(200px);
 }
 .article__content {
-    flex: 0 0 96%;
-    border: 1px solid pink;
+    flex: 0 0 97%;
     padding: 20px;
+    flex-wrap: wrap;
+    text-align: justify;
+    text-align-last: left;
 }
-.text--heavy{
+.text--big {
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
-.text--light {
+.text--small {
 
+}
+.addition {
+    float: right;
+    width: 200px;
+    margin: 15px -100px 15px 15px;
+    display: flex;
+    flex-direction: column;
+}
+.addition__title {
+    position: relative;
+    margin: 0;
+    padding: 0px 0px 0.83em 0px;
+    &::after {
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: 0;
+        width: 50px;
+        height: 3px;
+        background: $special;
+    }
+}
+.addition__text {
+    text-align: left;
+    font-family: none !important;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+.note {
+    position: absolute;
+    left: 100%;
+    width: 100px;
 }
 .title {
     position: relative;
