--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,3 +3,4 @@ $smooth: rgba(204,204,204,1);
 $dark: #000;
 $smoothdark: #040404;
 $special: rgba(52,141,178,1);
+$smoothspecial: rgba(234,243,247,1);
