--- a/index.ejs
+++ b/index.ejs
@@ -43,7 +43,7 @@
     <section class="area area--booking">
         <article class="article">
             <div class="article__header">
-                <h1 class="title title--fair">About</h1>
+                <h1 class="title title--fair">Booking</h1>
             </div>
             <div class="article__body">
                 <div class="article__aside">
@@ -51,7 +51,31 @@
                 </div>
                 <div class="article__content">
                     <div class="calendar">
-                        
+                        <div class="calendar__real">
+                            <div class="calendar__navigation">
+                                <button class="calendar__button calendar__button--previous">&#60;</button>
+                                <p class="calendar__display">2018</p>
+                                <button class="calendar__button calendar__button--next">&#62;</button>
+                            </div>
+                            <div class="calendar__header">
+                                <div>S</div>
+                                <div>M</div>
+                                <div>T</div>
+                                <div>W</div>
+                                <div>T</div>
+                                <div>F</div>
+                                <div>S</div>
+                            </div>
+                            <div class="calendar__body">
+                                    <button class="calendar__day"><div>1</div></button>
+                                    <button class="calendar__day calendar__day--active"><div>2</div></button>
+                                    <button class="calendar__day"><div>3</div></button>
+                                    <button class="calendar__day"><div>4</div></button>
+                                    <button class="calendar__day calendar__day--blocked"><div>5</div></button>
+                                    <button class="calendar__day"><div>6</div></button>
+                                    <button class="calendar__day"><div>7</div></button>
+                            </div>
+                        </div>
                     </div>
                     <div class="form">
                         <input type="text" class="form__email" placeholder="e-mail"/>
