Month days number bug fix
Fixed bug that caused bad calculations number of days in every month, added pattern 31/31 at July/August.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -231,6 +231,9 @@ border-radius: 15px;
                 border-radius: 100%;
             }
         }
+        .calendar__day--unavailable {
+            color: $smooth !important;
+        }
     }
 }
 .form {
