--- a/index.ejs
+++ b/index.ejs
@@ -67,6 +67,13 @@
                                 <div>S</div>
                             </div>
                             <div class="calendar__body">
+                                    <button class="calendar__day calendar__day--unavailable"><div>1</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>2</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>3</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>4</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>5</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>6</div></button>
+                                    <button class="calendar__day calendar__day--unavailable"><div>7</div></button>
                                     <button class="calendar__day"><div>1</div></button>
                                     <button class="calendar__day calendar__day--active"><div>2</div></button>
                                     <button class="calendar__day"><div>3</div></button>
