--- a/index.ejs
+++ b/index.ejs
@@ -67,38 +67,66 @@
                                 <div>S</div>
                             </div>
                             <div class="calendar__body">
-                                    <button class="calendar__day calendar__day--unavailable"><div>1</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>2</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>3</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>4</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>5</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>6</div></button>
-                                    <button class="calendar__day calendar__day--unavailable"><div>7</div></button>
-                                    <button class="calendar__day"><div>1</div></button>
-                                    <button class="calendar__day calendar__day--active"><div>2</div></button>
-                                    <button class="calendar__day"><div>3</div></button>
-                                    <button class="calendar__day"><div>4</div></button>
-                                    <button class="calendar__day calendar__day--blocked"><div>5</div></button>
-                                    <button class="calendar__day"><div>6</div></button>
-                                    <button class="calendar__day"><div>7</div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
+                                    <button class="calendar__day"><div></div></button>
                             </div>
                         </div>
                     </div>
                     <div class="form">
-                        <input type="text" class="form__email" placeholder="e-mail"/>
-                        <div class="customSelect">
+                        <input type="text" class="form__email" placeholder="e-mail" id="formEmail"/>
+                        <div class="customSelect form__select--wrapper">
                             <select class="form__select" id="formSelectInput">
                                 <option value="1">Option 1</option>
                                 <option value="2">Option 2</option>
                                 <option value="3">Option 3</option>
                             </select>
                         </div>
-                        <div class="customSelect">
+                        <div class="customSelect form__select--wrapper">
                             <select class="form__select" id="formSelectOutput">
 
                             </select>
                         </div>
-                        <button type="submit" class="form__submit">Book</button>
+                        <button type="submit" class="form__submit" id="formSubmit">Book</button>
                     </div>
                 </div>
             </div>
