--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -4,3 +4,7 @@ $dark: #000;
 $smoothdark: #040404;
 $special: rgba(52,141,178,1);
 $smoothspecial: rgba(234,243,247,1);
+
+$rwdSmall: 600px;
+$rwdMedium: 900px;
+$rwdBig: 1200px;
