--- a/index.ejs
+++ b/index.ejs
@@ -13,7 +13,7 @@
                 <h1 class="title title--dark">About</h1>
             </div>
             <div class="article__body">
-                <div class="article__aside">
+                <div class="article__aside article__aside--media">
                     <div class="preLine"></div>
                     <a href="google.com" class="icon"><img src="./assets/images/fb_grey.svg"/></a>
                     <a href="google.com" class="icon"><img src="./assets/images/twitter_grey.svg"/></a>
@@ -23,7 +23,7 @@
                 <div class="article__content">
                     <span class="text--big">What if a storm hits Hilton Head Island before you get ready to go on vacation? The answer is simple… stay home! But before you unpack, just check to make sure whether the Island has been affected. We have had many tropical storm warnings over the years, but unlike Florida we’ve been extremely fortunate. In our opinion, the best offense is defense.</span><br><br>
 
-                    <span class="text--small">We recommend purchasing travel insurance. Even the most basic travel insurance will provide some compensation if flights are canceled or the island is closed down due to a hurricane.</span><br><br>
+                    <span class="text--small">We recommend purchasing travel insurance. Even the most basic travel insurance will provide some compensation if flights are canceled or the island is closed down due to a hurricane.</span><br>
                     
                     <span class="text--small">In 2006, the National Hurricane Center is predicting a hurricane season with 8 to 10 named storms. As residents of Hilton Head Island, we always prepare the best we can. We are constantly planning ahead. You should do the same; you need to plan ahead. While we cannot forecast the weather day in and day out, the Internet can provide help in dealing with the variety of weather conditions vacationers may face that could take a toll on Hilton Head Island.  Weather Channel site and the National Hurricane Centers site are two excellent resources. 
                     <div class="addition">
