Graphics exchange, "alt" attributes
Created "alt" attributes for all images. Exchanged .png for .svg format in case of many resolutions in use.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -363,7 +363,7 @@ border-radius: 15px;
 }
 .form__select {
     width: 100%;
-    background: $smoothspecial url('./../images/arrows.png') no-repeat scroll 96% center;
+    background: $smoothspecial url('./../images/arrows.svg') no-repeat scroll 96% center;
     background-size: 10px;
     border-radius: 15px;
     overflow: hidden;
