--- a/index.ejs
+++ b/index.ejs
@@ -15,9 +15,9 @@
             <div class="article__body">
                 <div class="article__aside article__aside--media">
                     <div class="preLine"></div>
-                    <a href="google.com" class="icon"><img src="./assets/images/fb_grey.svg"/></a>
-                    <a href="google.com" class="icon"><img src="./assets/images/twitter_grey.svg"/></a>
-                    <a href="google.com" class="icon"><img src="./assets/images/insta_grey.svg"/></a>
+                    <a href="google.com" class="icon"><img src="./assets/images/fb_grey.svg" alt="Facebook logotype image"/></a>
+                    <a href="google.com" class="icon"><img src="./assets/images/twitter_grey.svg" alt="Twitter logotype image"/></a>
+                    <a href="google.com" class="icon"><img src="./assets/images/insta_grey.svg" alt="Instagram logotype image"/></a>
                     <div class="endLine"></div>
                 </div>
                 <div class="article__content">
@@ -31,7 +31,7 @@
                         <p class="addition__text">We recommend pur-chasing travel insur-ance. Even the most basic travel insurance will provide some com-pensation if flights are canceled or the island is closed down due to a hurricane.</p>
                     </div>At Hilton Head Rentals we recommend the following. Use the services of a travel professional, especially if you will be vacationing during hurricane season. When buying vacation packages through a vacation rental property management company or a travel agency, it will reduce your stress because travel professionals are your advocates and are ready to help you through difficult travel scenarios. If a vacation is booked online it may be difficult to get through to one of their representatives. On Hilton Head Island there are a lot of different vacation companies that offer a variety of vacation insurance plans. If you book directly with a vacation rental management company that offers homes, villas and condos, they will in all likelihood have insurance plans to offer. If you’re working with a travel agent, they can assist you in determining which plan provides the best coverage for the right price. Some even offer a “cancel for any reason” waiver, allowing you to see that a hurricane might be swirling for Hilton Head. With this type of plan, your travel professionals can quickly use their resources to find an alternate resort area so your vacation won’t be sacrificed.</span>
 
-                    <img src="./assets/images/foto1.png" class="article__image"/><br><br>
+                    <img src="./assets/images/foto1.png" class="article__image" alt="Article image - winter mountains"/><br><br>
 
                     <span class="text--small">On Hilton Head Island there are a lot of different vacation companies that offer a variety of vacation insurance plans. If you book directly with a vacation rental management company that offers homes, villas and condos, they will in all likelihood have insurance (1) <span class="note">1. With this type of plan, your travel <br>2. on Hilton Island there are a lot of different vacation companies</span>plans to offer. If you’re working with a travel agent (2), they can assist you in determining which plan provides the best coverage for the right price. Some even offer a “cancel for any reason” waiver, allowing you to see that a hurricane might be swirling for Hilton Head. With this type of plan, your travel professionals can quickly use their resources to find an alternate resort area so your vacation won’t be sacrificed.</span><br><br>
 
