--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -53,7 +53,7 @@ input, button, select {
 
 }
 .area--booking {
-    background: url('./../images/booking_bg.png');
+    background: url('./../images/booking_bg.png') center 50%;
     @media screen and (max-width: $rwdMedium) {
         background-repeat: no-repeat;
         background-size: cover;
@@ -170,6 +170,7 @@ input, button, select {
     width: 10px;
     position: absolute;
     left: -25px;
+    top: 5px;
     @media screen and (max-width: $rwdBig) {
         left: 0px;
         top: 25px;
@@ -221,6 +222,7 @@ input, button, select {
     }
 }
 .area--booking .article__content {
+    padding-bottom: 80px;
     @media screen and (max-width: $rwdMedium) {
         flex-direction: column
     }
@@ -237,7 +239,9 @@ border-radius: 15px;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    background: rgba(0,0,0,0.2);
+    position: relative;
+    background: rgba(0,0,0,0.3);
+    -webkit-backdrop-filter: blur(20px);
     .calendar__real {
         display: flex;
         flex-direction: column;
@@ -277,7 +281,7 @@ border-radius: 15px;
             display: flex;
             justify-content: center;
             width: (100%/7);
-            font-size: 0.7em;
+            font-size: 0.8em;
             font-weight: bold;
         }
     }
@@ -293,6 +297,7 @@ border-radius: 15px;
             width: (100%/7);
             padding: 3px;
             > div {
+                font-weight: bold;
                 width: 25px;
                 height: 25px;
                 border-radius: 100%;
@@ -376,6 +381,7 @@ border-radius: 15px;
     color: $fair;
     text-transform: uppercase;
     margin: 30px auto 10px auto;
+    box-shadow: 0px 10px 20px 0px $smooth;
 }
 .form__email, .form__select--wrapper {
     margin: 10px auto;
