--- a/index.ejs
+++ b/index.ejs
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="form">
-                        <input type="text" class="form__email" placeholder="e-mail" id="formEmail"/>
+                        <input type="email" class="form__email" placeholder="e-mail" id="formEmail"/>
                         <div class="customSelect form__select--wrapper">
                             <select class="form__select" id="formSelectInput">
                                 <option value="1">Option 1</option>
